--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,10 +3,22 @@
   apt:
     name: nginx
     state: present
-    updated_cashe: yes
+    update_cache: yes
 
-- name: Check if nginx is running
+- name: Copy nginx site configuration
+  template:
+    src: "{{ nginx_site_template }}"
+    dest: "{{ nginx_site_available }}"
+  notify: Restart nginx
+
+- name: Enable nginx site
+  file:
+    src: "{{ nginx_site_available }}"
+    dest: "{{ nginx_site_enabled }}"
+    state: link
+
+- name: Ensure nginx is running
   service:
     name: nginx
     state: started
-    enabled: yes
+    enabled: true
