--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: Fisenko Nikita
+  description: Ansible Galaxy Role For Docker
+  company: is-devops-4sem
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
