--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,3 +2,5 @@
 nginx_site_template: "nginx.conf.j2"
 nginx_site_available: "/etc/nginx/sites-available/default"
 nginx_site_enabled: "/etc/nginx/sites-enabled/default"
+static_files_path: "/var/www/static"
+proxy_pass_url: "http://127.0.0.1:8080"
