--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
+worker_connections: "1024"
 nginx_conf_template: "nginx.conf.j2"
 nginx_conf_dest: "/etc/nginx/nginx.conf"
 nginx_site_template: "default.conf.j2"
