--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,15 +5,6 @@
     state: present
     update_cache: yes
 
-- name: Ensure nginx configuration directories exist
-  file:
-    path: "/etc/nginx/{{ item }}"
-    state: directory
-    mode: '0755'
-  loop:
-    - sites-available
-    - sites-enabled
-
 - name: Copy main nginx configuration with validation
   template:
     src: "{{ nginx_conf_template }}"
@@ -21,22 +12,7 @@
     owner: root
     group: root
     mode: '0644'
-    validate: "nginx -t -c {{ nginx_conf_dest }}"
-
-- name: Copy nginx site configuration with validation
-  template:
-    src: "{{ nginx_site_template }}"
-    dest: "{{ nginx_site_available }}"
-    validate: "nginx -t -c {{ nginx_site_available }}"
-    owner: root
-    group: root
-    mode: '0644'
-
-- name: Enable nginx site
-  file:
-    src: "{{ nginx_site_available }}"
-    dest: "{{ nginx_site_enabled }}"
-    state: link
+    validate: "nginx -t -c %s"
 
 - name: Ensure nginx is running
   service:
