--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,3 +4,4 @@ nginx_conf_template: "nginx.conf.j2"
 nginx_conf_dest: "/etc/nginx/nginx.conf"
 static_files_path: "/var/www/static"
 proxy_pass_url: "http://127.0.0.1:8080"
+default_site_template: "default-site.conf.j2"
